# red-sysinfo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt
red-sys/: pyproject.toml
red-sys/src/red_sys/domain/: __init__.py
red-sys/src/red_sys/domain/platform/: __init__.py
red-sys/src/red_sys/domain/platform/enums/: cross_platform.py  win32.py
src/: example.py
src/red_sys/: __init__.py  __main__.py
src/red_sys/domain/platform/: methods.py  utils.py
src/red_sys/utils/: __init__.py
src/red_sys/utils/platform_utils/: operations.py
src/red_sysinfo/: __init__.py  __main__.py
src/red_sysinfo/domain/: __init__.py
src/red_sysinfo/domain/enums/: __init__.py
src/red_sysinfo/domain/enums/platform/: cross_platform.py
src/red_sysinfo/domain/enums/sysinfo/: __init__.py  enums.py
src/red_sysinfo/domain/mixins/: __init__.py  _dict.py  schemas.py
src/red_sysinfo/domain/platform/: __init__.py  methods.py  schemas.py  utils.py
src/red_sysinfo/domain/platform/enums/: mac.py  unix.py  win32.py
src/red_sysinfo/domain/sysinfo/: __init__.py  methods.py  schemas.py
src/red_sysinfo/domain/sysinfo/cpu/: __init__.py  schemas.py
src/red_sysinfo/domain/sysinfo/memory/: __init__.py  schemas.py
src/red_sysinfo/domain/userinfo/: __init__.py  _unix.py  _win.py  methods.py  schemas.py
src/red_sysinfo/utils/: __init__.py
src/red_sysinfo/utils/conversion_utils/: __init__.py  converters.py
src/red_sysinfo/utils/platform_utils/: __init__.py  operations.py
sys-info/: README.md  pyproject.toml
sys-info/src/: test.py
sys-info/src/sys_info/: __init__.py  __main__.py  test.py
sys-info/src/sys_info/domain/platform/: __init__.py  methods.py  schemas.py
sys-info/src/sys_info/domain/platform/enums/: __init__.py  cross_platform.py  mac.py  unix.py  win32.py
sys-info/src/sys_info/utils/: __init__.py
sys-info/src/sys_info/utils/platform_utils/: __init__.py  operations.py
tests/: conftest.py  test_platform.py
