[project]
name = ""
version = ""
description = ""
authors = [{ name = "redjax", email = "none@none.com" }]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["black>=23.10.1", "pytest>=7.4.3", "ruff>=0.1.3"]

[tool.pdm.scripts]

###############
# Format/Lint #
###############

# Run black & ruff
lint = { shell = "pdm run black . && pdm run ruff check . --fix" }
# Check only, don't fix
check = { cmd = "black ." }
# Check and fix
format = { cmd = "ruff check . --fix" }
